* 変更点一覧

** 2.5.0-preview2

*** features

- PEAR依存を排除するための変更
-- Console_Getopt の代替として、Ethna_Getopt.php を追加

** 2.5.0-preview1

*** features

- ソースコード全体をUTF-8化
-- 但し、日本語のソースコードコメントはそのまま
-- [Breaking B.C] フレームワークで扱う内部エンコーディング(mb_internal_encoding)もデフォルトはUTF-8に変更。但し、これは Ethna_Controller#_getDefaultLanguage
   をオーバーライドし、クライアントエンコーディングの値を変えることで変更可能です。
-- 内部エンコーディングの変更に伴い、動作しなくなった箇所を修正
--- Ethna_Plugin_Validator_Min.php
--- Ethna_Plugin_Validator_Max.php
--- VAR_TYPE_STRING の場合の、最大値最小値のプラグインを再編し、
    マルチバイトのものとそうでないものを分離。互換性確保用途のプラグインも追加
---- Ethna_Plugin_Validator_MbStrMax.php     (マルチバイト文字列最大値)
---- Ethna_Plugin_Validator_MbStrMin.php     (マルチバイト文字列最小値)
---- Ethna_Plugin_Validator_StrMax.php       (シングルバイト文字列最大値)
---- Ethna_Plugin_Validator_StrMin.php       (シングルバイト文字列最小値)
---- Ethna_Plugin_Validator_StrMaxCompat.php (2.3.x までの互換性確保用)
---- Ethna_Plugin_Validator_StrMinCompat.php (2.3.x までの互換性確保用)
-- 内部エンコーディングの変更に伴う動作の変更
--- Ethna_Plugin_Validator_Mbregexp のデフォルトのエンコーディングは、クライアントエンコーディングが仮定されます。デフォルトはUTF-8です。
- 国際化 (i18n) のための機能追加および変更
-- [Breaking B.C] 言語名として解釈していた部分をロケール名に変更
--- これにより、[appid]template/ja, [appid]/locale/ja の「ja」の部分が ja_JP に置き換わります。よって、古いバージョンから移行する場合はディレクトリ名の変更が必要です。
--- Ethna_ViewClass に、言語切り替え用の _setLanguage メソッドを追加 (protected)
--- Ethna.php で定義されていた、LANG_JA, LANG_EN はこの変更により使用されないので削除
-- [Breaking B.C] gettext を使用する際には [appid]/etc/[appid]-ini.php で 'use_gettext' => true と設定しないと gettext を使わないようにした
--- 2.3.5 までのコードは、gettext.so がロードされていれば *無条件に* gettext が実行されるようになっているので、Ethna 独自のメッセージカタログとの選択がわかりづらいため。
--- 2.3.5までのコードで gettext を利用している場合は、設定が明示的に必要です。
-- "ethna add-project" コマンドに [-l|--locale] [-e|--encoding] オプションを追加
-- "ethna add-[view|templete]" コマンドに [-l|--locale] [-e|--encoding] オプションを追加
-- スケルトンの日本語コメントをすべてASCIIに変更(好みのエンコーディングで編集できるようにするため)
-- gettextを使わない場合向けに、Ethna独自のメッセージカタログを実装
--- ini ファイルライクなフォーマットで msgid と翻訳を格納する方式
--- Ethna_I18N#setLanguage で出力ロケールの切り替えも可能